<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start_message">Welcome to mHealth, please create a new account</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_values">Values:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="delete_contact">Are you really sure, you want to delete it.</string>
    <string name="yes">Yes, do it!</string>
    <string name="no">No!</string>

    <string name="weight_string">Weight</string>
    <string name="weight_unit_string">Weight Unit</string>
    <string name="weight_unit">N.A.</string>
    <string name="weight_value">N.A.</string>
    <string name="bp_unit">N.A.</string>
    <string name="bp_unit_string">BP Unit</string>
    <string name="systolic_string">Systolic</string>
    <string name="systolic_value">N.A.</string>
    <string name="diastolic_string">Diastolic</string>
    <string name="diastolic_value">N.A.</string>
    <string name="map_string">MAP</string>
    <string name="map_value">N.A.</string>
    <string name="pulse_string">Pulse</string>
    <string name="pulse_value">N.A.</string>
    <string name="date_string">Last Read</string>
    <string name="date_value">N.A.</string>
    <string name="na_value_generic">N.A.</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="add_user">Add a new User</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user">Edit User</string>
    <string name="menu_setting">User Settings</string>
    <string name="menu_fhir">FHIR upload</string>

    <!-- User Activity -->

    <string name="email">Email</string>
    <string name="save">Save User</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Patient Activity -->
    <string name="patient_id">000000</string>
    <string name="patient_id_info">Enter your Patient ID, handed over from the Doc!</string>
    <string name="server">http://...</string>
    <string name="server_info">Enter the FHIR server address:</string>
    <string name="upload_info">Press the button below, to upload your Healthdata to FHIR:</string>
    <string name="savebuttonpatient">Save Patient ID</string>
    <string name="savebuttonserver">Save Server</string>
    <string name="uploadbuttonpatient">Upload to FHIR!</string>

</resources>
