<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_fhir"
        android:title="@string/menu_fhir"
        android:orderInCategory="105"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/edit_user"
        android:title="@string/edit_user"
        android:orderInCategory="105"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/delete_user"
        android:title="@string/delete_user"
        android:orderInCategory="106"
        app:showAsAction="ifRoom|withText" />

</menu>